--- a/static/index.html
+++ b/static/index.html
@@ -10,17 +10,16 @@
 <body>
     <div class="container" style="justify-content: left; display: flex;">
         <div class="navbar" id="nav">
-            <div class="titlebar" style="justify-content: left;">
+            <div class="titlebar" style="text-align: center;">
                 <b><p style="font-size: large;">DefaultMod</p></b>
             </div>
-
-            <p></p>
             
             <div class="apps">
-                <div class="amc">
+                <div class="amc" style="text-align: center;">
                     <button class="amcB" onclick="addDefault()">+</button>
                     <button class="amcB" onclick="removeDefault()">-</button>
                 </div>
+                <hr>
                 <div id="defaultAppList">
                     <p id="upperMT">Loading...</p>
                 </div>
@@ -57,9 +56,16 @@
         cursor: pointer;
     }
 
+    br {
+        height: 3px;
+    }
+
     .button {
+        text-align: left;
         border: none;
-        border-radius: 15px;
+        width: 94%;
+        height: 30px;
+        border-radius: 5px;
         background-color: #dcdcdc;
         cursor: pointer;
     }
